k8s/04-hazelcast-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hazelcast-service
  namespace: hazelcast
  labels:
    app: hazelcast
    component: cluster
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: hazelcast
    component: member
  ports:
    - name: hazelcast
      port: 5701
      targetPort: 5701
      protocol: TCP
