k8s/06-mc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hazelcast-mc-service
  namespace: hazelcast
  labels:
    app: hazelcast-mc
    component: management-center
spec:
  type: ClusterIP
  selector:
    app: hazelcast-mc
    component: management-center
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
