k8s/hazelcast-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hazelcast-service
  labels:
    app: hazelcast
spec:
  type: LoadBalancer
  selector:
    app: hazelcast
  ports:
    - name: hazelcast
      port: 80
      targetPort: 5701
      protocol: TCP
