k8s/hazelcast-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hazelcast-mc-ingress
  namespace: hazelcast
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - hazelcast.archse.eng.br
    secretName: hazelcast-tls
  rules:
  - host: hazelcast.archse.eng.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hazelcast-mancenter     # << este é o seu Service
            port:
              number: 8080
