k8s/hazelcast-member.yaml
apiVersion: v1
kind: Service
metadata:
  name: hazelcast-service
  namespace: hazelcast
  labels:
    app: hazelcast
spec:
  type: ClusterIP
  selector:
    app: hazelcast
  ports:
    - name: hazelcast
      port: 5701
      targetPort: 5701
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hazelcast
  namespace: hazelcast
  labels:
    app: hazelcast
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hazelcast
  template:
    metadata:
      labels:
        app: hazelcast
    spec:
      serviceAccountName: hazelcast
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
      - name: hazelcast
        image: hazelcast/hazelcast:5.5
        ports:
        - containerPort: 5701
          name: hazelcast
        readinessProbe:
          tcpSocket:
            port: 5701
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 5701
          initialDelaySeconds: 15
          periodSeconds: 20
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hazelcast-ingress
  namespace: hazelcast
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - hazelcast.archse.eng.br
    secretName: hazelcast-tls
  rules:
  - host: hazelcast.archse.eng.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hazelcast-service
            port:
              number: 80
